@@ -104,16 +104,30 @@ sub find_live {
                       next;
                   }
                   # check the instrument name is what is expected for this run
-                  my $db_external_name        = $run_row->instrument->external_name();
-                  my $staging_instrument_name = $check->instrument_name(); # from RunInfo.xml
-                  if ( $db_external_name and
-                          ($db_external_name ne $staging_instrument_name)) {
-                      warn "Skipping $run_dir - instrument name mismatch" .
-                         " for run $id_run, '$staging_instrument_name' on staging," .
-                         " '$db_external_name' in the database.\n";
-                      next;
-                  }
-                  $run_row->update({'folder_name' => $run_folder}); # or validation will fail
+                  my $db_external_name = $run_row->instrument->external_name();
+                  if (! $db_external_name ){
+                      warn qq[No instrument external_name for '$id_run' found in database, skipping\n];
+		      next;
+	          }
+                  my $staging_instrument_name;
+                  try {
+                      $staging_instrument_name = $check->instrument_name(); # from RunInfo.xml
+		      warn "Retrieved instrument_name $staging_instrument_name\n";
+		  } catch {
+                      warn "error retrieving instrument_name from RunInfo.xml\n";
+		  };
+		  if ( ! defined $staging_instrument_name ) {
+                     warn "instrument_name is undefined, skipping $run_dir\n";
+		     next;
+	          } else {
+                      if ($db_external_name ne $staging_instrument_name) {
+                          warn "Skipping $run_dir - instrument name mismatch" .
+                             " for run $id_run, '$staging_instrument_name' on staging," .
+                             " '$db_external_name' in the database.\n";
+                          next;
+                      }
+                      $run_row->update({'folder_name' => $run_folder}); # or validation will fail
+		  }
                 }    
                 if ( npg_tracking::illumina::run::folder::validation->new(
                          run_folder          => $run_folder,
